app表示されない

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -19,7 +19,7 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
-@keyframes logo-spin {
+/* @keyframes logo-spin {
   from {
     transform: rotate(0deg);
   }
@@ -44,4 +44,4 @@
 
 h1 {
   color: #c871cb
-}
+} */
