--- a/src/assets/css/navbar.css
+++ b/src/assets/css/navbar.css
@@ -107,3 +107,51 @@ a.active {
     font-size: 15px;
   }
 }
+
+@media screen and (max-width: 428px) {
+  .logo {
+    padding-left: 2rem;
+  }
+  .navbar_menu {
+    padding-right: 2rem;
+  }
+  .logo_title h2 {
+    font-size: 15px;
+  }
+  .logo_name p {
+    font-size: 12px;
+  }
+  .navbar_menu_items p {
+    font-size: 15px;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .navbar {
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+  .logo {
+    padding-left: 0;
+    padding-bottom: 0.5rem;
+  }
+  .navbar_menu {
+    padding-right: 0;
+  }
+  .navbar_menu_items {
+    margin: auto 1rem;
+  }
+  .navbar_menu_items p {
+    font-size: 15px;
+    margin-bottom: 0;
+  }
+  .logo_title h2 {
+    font-size: 18px;
+  }
+  .logo_name p {
+    font-size: 15px;
+  }
+ 
+}
